# viper

./: LICENSE  README.md  app.R  demo_hotspot_detection.ipynb  demo_vcf_creation.ipynb  pyproject.toml  test.fasta  viper.bat  viper_launch.R  viper_log.txt
R/: server.R  ui.R
R/server/: alignment_tab.R  codon_tab.R  mutation_tab.R  sequence_tab.R  summary_tab.R
data/: avian_metapneumovirus.fasta  example_aligned_sequences.fasta  example_sequences.fasta  generated_variants.vcf  sars_cov_aligned.fasta
data/sars_cov/: sars_cov_unaligned.fasta
viper/: hotspot.py  utils.py  vcf_generator.py  visualization.py
viper/data/sars_cov/: sars_cov_mutations.vcf
