[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viper"
version = "0.1.0"
description = "VIPER: Viral Interpretation and Protein Evolution Reporter — mutation hotspot detection and functional impact annotation for viral genomes"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["virology", "viral genomics", "mutation hotspot", "bioinformatics", "viral proteins"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/viper"
Documentation = "https://github.com/yourusername/viper/wiki"
Repository = "https://github.com/yourusername/viper"

[project.dependencies]
biopython = "^1.79"
pandas = "^1.5"
numpy = "^1.24"
scipy = "^1.9"
matplotlib = "^3.6"
seaborn = "^0.12"

[tool.setuptools.packages.find]
where = ["viper"]
