[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viper"
version = "0.1.0"
description = "VIPER: Viral Interpretation and Protein Evolution Reporter — mutation hotspot detection and functional impact annotation for viral genomes"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Andrew Vazzano"}
]
keywords = ["virology", "viral genomics", "mutation hotspot", "bioinformatics", "viral proteins"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "biopython>=1.79",
    "pandas>=1.5",
    "numpy>=1.24",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "seaborn>=0.12"
]